[gd_scene load_steps=15 format=1]

[ext_resource path="res://Scenes/Main_Screen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tela_Inicial/expressions_btn_bg.png" type="Texture" id=2]
[ext_resource path="res://Assets/Tela_Inicial/expression_icon.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/TragicMarker.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Tela_Inicial/top_menu.png" type="Texture" id=5]
[ext_resource path="res://Assets/Tela_Inicial/app_name.png" type="Texture" id=6]
[ext_resource path="res://Assets/Tela_Inicial/menu_btn.png" type="Texture" id=7]
[ext_resource path="res://Assets/Tela_Inicial/mensagem_pais.png" type="Texture" id=8]
[ext_resource path="res://Assets/Tela_Inicial/entrar_btn.png" type="Texture" id=9]
[ext_resource path="res://Assets/Tela_Inicial/routines_icon.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]

font/size = 110
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="CanvasItemMaterial" id=3]

shader/shading_mode = 0

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Animation" id=4]

resource/name = "Drop_Bar"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Bar/Top_Menu:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 500, -840 ), Vector2( 500, 920 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bar/Top_Menu/App_name:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bar/Top_Menu/Menu_Button:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Main_Screen" type="Node"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

editor/display_folded = true

[node name="BG" type="ColorFrame" parent="Background"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -3.0
margin/right = 1000.0
margin/bottom = 1697.0
color = Color( 1, 1, 1, 1 )

[node name="Expression_button" type="Sprite" parent="Background"]

transform/pos = Vector2( 493.756, 1371.98 )
texture = ExtResource( 2 )

[node name="Expressions_Figure" type="Sprite" parent="Background/Expression_button"]

transform/pos = Vector2( -231.613, -70.4907 )
transform/scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="Expressions" type="Label" parent="Background/Expression_button"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -7.0
margin/top = -104.0
margin/right = 434.0
margin/bottom = 7.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.356863, 0.356863, 0.356863, 1 )
custom_colors/font_color_shadow = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "Express√µes"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Bar" type="CanvasLayer" parent="."]

layer = 21
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Top_Menu" type="Sprite" parent="Bar"]

transform/pos = Vector2( 500, -840 )
z/z = 1
texture = ExtResource( 5 )

[node name="App_name" type="Sprite" parent="Bar/Top_Menu"]

transform/pos = Vector2( -4.13458, 955 )
transform/scale = Vector2( 1.06613, 1 )
z/z = 1
texture = ExtResource( 6 )

[node name="Menu_Button" type="TextureButton" parent="Bar/Top_Menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -464.0
margin/top = 890.0
margin/right = -388.0
margin/bottom = 945.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Parents_message" type="Sprite" parent="Bar/Top_Menu"]

transform/pos = Vector2( 20.5487, -352.753 )
texture = ExtResource( 8 )

[node name="LineEdit" type="LineEdit" parent="Bar/Top_Menu"]

visibility/blend_mode = 1
material/material = SubResource( 3 )
material/use_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -353.0
margin/top = 230.0
margin/right = 390.0
margin/bottom = 387.0
custom_colors/selection_color = Color( 0, 0, 0, 1 )
placeholder/text = "Senha"
placeholder/alpha = 1.0
secret = true
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="TextureButton 2" type="TextureButton" parent="Bar/Top_Menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -351.0
margin/top = 427.0
margin/right = 388.0
margin/bottom = 584.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="CanvasLayer" type="CanvasLayer" parent="Bar/Top_Menu"]

layer = 21
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Routines_Button" type="Node2D" parent="."]

editor/display_folded = true

[node name="Rotinas" type="Label" parent="Routines_Button"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 59.0
margin/top = 563.0
margin/right = 349.0
margin/bottom = 674.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.356863, 0.356863, 0.356863, 1 )
custom_colors/font_color_shadow = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "Rotinas"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Routines_Figure" type="Sprite" parent="Routines_Button"]

transform/pos = Vector2( 729.403, 571.48 )
transform/scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 10 )

[node name="Routines_btn" type="TouchScreenButton" parent="Routines_Button"]

transform/pos = Vector2( 525.308, 592.592 )
transform/scale = Vector2( -55.1122, -33.3523 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 2 )
shape_centered = true
shape_visible = false
passby_press = false
action = ""
visibility_mode = 0

[node name="Anim_Bar" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Drop_Bar = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="pressed" from="Bar/Top_Menu/Menu_Button" to="." method="_on_Menu_Button_pressed"]

[connection signal="pressed" from="Routines_Button/Routines_btn" to="." method="_on_Routines_btn_pressed"]


